k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nheek-d
  namespace: cloudnative-pg
  labels:
    app: nheek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nheek
  template:
    metadata:
      labels:
        app: nheek
    spec:
      priorityClassName: high-priority
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nheek
          image: nheek/nheek:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "40Mi"
