k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nheek-service
  namespace: cloudnative-pg
  labels:
    app: nheek
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nheek
